--- a/LogParser/LogParser.csproj
+++ b/LogParser/LogParser.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AWSSDK.KinesisFirehose" Version="3.3.1.15"/>
     <PackageReference Include="AWSSDK.S3" Version="3.3.9"/>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.1"/>
+    <PackageReference Include="System.IO.Compression" Version="4.1.0"/>
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Amazon.Lambda.Tools" Version="1.7.0"/>
